# .emacs.d

./: .gitignore  configs.el  init.el
configs/: ac-config.el  ace-config.el  any-config.el  backups-config.el  bindings-config.el  c-config.el  c-lang-config.el  cedet-config.el  common-lisp-config.el  cpp.el  ecb-config.el  elfeed-config.el  emacs-lisp-config.el  encoding-config.el  eshell-config.el  flycheck-config.el  go-config.el  go.el  gore-config.el  gtranslate-config.el  helm-config.el  ibuffer-config.el  im.el  jabber-config.el  minimal.el  misc-config.el  mycscope-config.el  myhelm-config.el  normal.el  org-config.el  package-sources-config.el  projectile-config.el  ui-config.el
elisp/: base-diminish.el  base-env.el  base-extensions.el  base-functions.el  base-global-keys.el  base-org.el  base.el  lang-cpp.el  lang-elisp.el  lang-js.el  lang-py.el  multi-magit.el  yandex-browser.el
elisp/hosts/: bioh-nix.el  bioh-w10.el  ops.el  t480.el  thinkpad.el  x220.el
etc/yasnippet/snippets/c++-mode/: dli  dlit  dliv
etc/yasnippet/snippets/cmake-mode/: mmin
lisp/: .gitignore  configs.el  utils.el
lisp/configs/: .gitignore  ac-config.el  ace-config.el  ack-config.el  ag-config.el  backups-config.el  bindings-config.el  c-lang-config.el  cedet-config.el  company-config.el  dired-config.el  ecb-config.el  elfeed-config.el  erc-config.el  eshell-config.el  fonts-config.el  go-config.el  gore-config.el  gtranslate-config.el  ido-config.el  irfc-config.el  irony-config.el  jabber-config.el  md-config.el  misc-config.el  mycscope-config.el  org-config.el  personal-config.el  projectile-config.el  python-config.el  restclient-config.el  russian-config.el  spellcheck-config.el  tramp-config.el  vcs-config.el  windmove-config.el
lisp/utils/: editing-utils.el
project-skeletons/cpp-cmake/: .clang-format  CMakeLists.txt  build.sh
project-skeletons/cpp-make/: Makefile
project-skeletons/modern-cpp/: CMakeLists.txt  build.sh
project-skeletons/modern-cpp/src/: CMakeLists.txt  main.cpp
project-skeletons/modern-cpp/test/: CMakeLists.txt  app_test.cpp
sh/: ag.sh  ditaa.sh  dot.sh  emacs.sh  global.sh  go.sh  plantuml.sh
